--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,15 +1,18 @@
 .link{
     
-    display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center;
   color: white;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: larger;
 
   
 
 }
 .nav-link {
-    margin: 20px 50px;
+    margin: 50px 80px;
     text-transform: uppercase;
+    text-shadow: 5px;
     padding: 20px;
 }
