--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -4,6 +4,10 @@
     margin: 20px 0;
     padding: 20px;
 }
+.outcard {
+    color: whitesmoke;
+    margin: 20px 0;
+}
 .form-group{
     margin: 20px 0;
     padding: 5px 0;
